MSS-1601-bugfix-alignment done

--- a/olivia-burton-uk/cartridges/app_custom_ob_uk/cartridge/client/default/scss/checkout/_checkout.scss
+++ b/olivia-burton-uk/cartridges/app_custom_ob_uk/cartridge/client/default/scss/checkout/_checkout.scss
@@ -1,6 +1,3 @@
-// Larger Screen
-$lg-media: 1400px;
-
 .shipping-method-option {
     .arrival-time {
         white-space: pre-wrap;
